--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,6 @@ jobs:
             cd devops_first-pet-project
             git pull origin main
             sudo docker compose pull
-            sudo docker compose up -d
+            sudo docker compose up -d --build
             sudo docker image prune -f
 
