--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
             cd devops_first-pet-project
             git pull origin main
             sudo docker compose pull
-            sudo docker compose up -d --build
+            sudo docker compose up -d
             sudo docker image prune -f
       - name: Run Health Check
         run: |
